--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -159,6 +159,493 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Ship Date</th>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Product ID</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Sub-Category</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Discount</th>\n",
+       "      <th>Buy Price</th>\n",
+       "      <th>Price Per Each</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>152156</td>\n",
+       "      <td>2016-11-08</td>\n",
+       "      <td>2016-11-11</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Henderson, Kentucky, United States - 42420</td>\n",
+       "      <td>South</td>\n",
+       "      <td>CG-12520</td>\n",
+       "      <td>Claire Gute</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>FUR-BO-10001798</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Bookcases</td>\n",
+       "      <td>Bush Somerset Collection Bookcase</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>130.9800</td>\n",
+       "      <td>151.9368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>152156</td>\n",
+       "      <td>2016-11-08</td>\n",
+       "      <td>2016-11-11</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Henderson, Kentucky, United States - 42420</td>\n",
+       "      <td>South</td>\n",
+       "      <td>CG-12520</td>\n",
+       "      <td>Claire Gute</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>FUR-CH-10000454</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Chairs</td>\n",
+       "      <td>Hon Deluxe Fabric Upholstered Stacking Chairs,...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>243.9800</td>\n",
+       "      <td>317.1740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>138688</td>\n",
+       "      <td>2016-06-12</td>\n",
+       "      <td>2016-06-16</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Los Angeles, California, United States - 90036</td>\n",
+       "      <td>West</td>\n",
+       "      <td>DV-13045</td>\n",
+       "      <td>Darrin Van Huff</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>OFF-LA-10000240</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Labels</td>\n",
+       "      <td>Self-Adhesive Address Labels for Typewriters b...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>7.3100</td>\n",
+       "      <td>10.7457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>108966</td>\n",
+       "      <td>2015-10-11</td>\n",
+       "      <td>2015-10-18</td>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>Fort Lauderdale, Florida, United States - 33311</td>\n",
+       "      <td>South</td>\n",
+       "      <td>SO-20335</td>\n",
+       "      <td>Sean O'Donnell</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>FUR-TA-10000577</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Tables</td>\n",
+       "      <td>Bretford CR4500 Series Slim Rectangular Table</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>191.5155</td>\n",
+       "      <td>114.9093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>108966</td>\n",
+       "      <td>2015-10-11</td>\n",
+       "      <td>2015-10-18</td>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>Fort Lauderdale, Florida, United States - 33311</td>\n",
+       "      <td>South</td>\n",
+       "      <td>SO-20335</td>\n",
+       "      <td>Sean O'Donnell</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>OFF-ST-10000760</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Storage</td>\n",
+       "      <td>Eldon Fold 'N Roll Cart System</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>11.1840</td>\n",
+       "      <td>12.4422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9989</th>\n",
+       "      <td>110422</td>\n",
+       "      <td>2014-01-21</td>\n",
+       "      <td>2014-01-23</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Miami, Florida, United States - 33180</td>\n",
+       "      <td>South</td>\n",
+       "      <td>TB-21400</td>\n",
+       "      <td>Tom Boeckenhauer</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>FUR-FU-10001889</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Furnishings</td>\n",
+       "      <td>Ultra Door Pull Handle</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>8.4160</td>\n",
+       "      <td>9.7836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9990</th>\n",
+       "      <td>121258</td>\n",
+       "      <td>2017-02-26</td>\n",
+       "      <td>2017-03-03</td>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>Costa Mesa, California, United States - 92627</td>\n",
+       "      <td>West</td>\n",
+       "      <td>DB-13060</td>\n",
+       "      <td>Dave Brooks</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>FUR-FU-10000747</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Furnishings</td>\n",
+       "      <td>Tenex B1-RE Series Chair Mats for Low Pile Car...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>45.9800</td>\n",
+       "      <td>53.7966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9991</th>\n",
+       "      <td>121258</td>\n",
+       "      <td>2017-02-26</td>\n",
+       "      <td>2017-03-03</td>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>Costa Mesa, California, United States - 92627</td>\n",
+       "      <td>West</td>\n",
+       "      <td>DB-13060</td>\n",
+       "      <td>Dave Brooks</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>TEC-PH-10003645</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>Phones</td>\n",
+       "      <td>Aastra 57i VoIP phone</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>129.2880</td>\n",
+       "      <td>138.9846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9992</th>\n",
+       "      <td>121258</td>\n",
+       "      <td>2017-02-26</td>\n",
+       "      <td>2017-03-03</td>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>Costa Mesa, California, United States - 92627</td>\n",
+       "      <td>West</td>\n",
+       "      <td>DB-13060</td>\n",
+       "      <td>Dave Brooks</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>OFF-PA-10004041</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Paper</td>\n",
+       "      <td>It's Hot Message Books with Stickers, 2 3/4\" x 5\"</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>7.4000</td>\n",
+       "      <td>10.7300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9993</th>\n",
+       "      <td>119914</td>\n",
+       "      <td>2017-05-04</td>\n",
+       "      <td>2017-05-09</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Westminster, California, United States - 92683</td>\n",
+       "      <td>West</td>\n",
+       "      <td>CC-12220</td>\n",
+       "      <td>Chris Cortes</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>OFF-AP-10002684</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Appliances</td>\n",
+       "      <td>Acco 7-Outlet Masterpiece Power Center, Wihtou...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>121.5800</td>\n",
+       "      <td>158.0540</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9994 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Order ID Order Date  Ship Date       Ship Mode  \\\n",
+       "0       152156 2016-11-08 2016-11-11    Second Class   \n",
+       "1       152156 2016-11-08 2016-11-11    Second Class   \n",
+       "2       138688 2016-06-12 2016-06-16    Second Class   \n",
+       "3       108966 2015-10-11 2015-10-18  Standard Class   \n",
+       "4       108966 2015-10-11 2015-10-18  Standard Class   \n",
+       "...        ...        ...        ...             ...   \n",
+       "9989    110422 2014-01-21 2014-01-23    Second Class   \n",
+       "9990    121258 2017-02-26 2017-03-03  Standard Class   \n",
+       "9991    121258 2017-02-26 2017-03-03  Standard Class   \n",
+       "9992    121258 2017-02-26 2017-03-03  Standard Class   \n",
+       "9993    119914 2017-05-04 2017-05-09    Second Class   \n",
+       "\n",
+       "                                              Address Region Customer ID  \\\n",
+       "0          Henderson, Kentucky, United States - 42420  South    CG-12520   \n",
+       "1          Henderson, Kentucky, United States - 42420  South    CG-12520   \n",
+       "2      Los Angeles, California, United States - 90036   West    DV-13045   \n",
+       "3     Fort Lauderdale, Florida, United States - 33311  South    SO-20335   \n",
+       "4     Fort Lauderdale, Florida, United States - 33311  South    SO-20335   \n",
+       "...                                               ...    ...         ...   \n",
+       "9989            Miami, Florida, United States - 33180  South    TB-21400   \n",
+       "9990    Costa Mesa, California, United States - 92627   West    DB-13060   \n",
+       "9991    Costa Mesa, California, United States - 92627   West    DB-13060   \n",
+       "9992    Costa Mesa, California, United States - 92627   West    DB-13060   \n",
+       "9993   Westminster, California, United States - 92683   West    CC-12220   \n",
+       "\n",
+       "         Customer Name    Segment       Product ID         Category  \\\n",
+       "0          Claire Gute   Consumer  FUR-BO-10001798        Furniture   \n",
+       "1          Claire Gute   Consumer  FUR-CH-10000454        Furniture   \n",
+       "2      Darrin Van Huff  Corporate  OFF-LA-10000240  Office Supplies   \n",
+       "3       Sean O'Donnell   Consumer  FUR-TA-10000577        Furniture   \n",
+       "4       Sean O'Donnell   Consumer  OFF-ST-10000760  Office Supplies   \n",
+       "...                ...        ...              ...              ...   \n",
+       "9989  Tom Boeckenhauer   Consumer  FUR-FU-10001889        Furniture   \n",
+       "9990       Dave Brooks   Consumer  FUR-FU-10000747        Furniture   \n",
+       "9991       Dave Brooks   Consumer  TEC-PH-10003645       Technology   \n",
+       "9992       Dave Brooks   Consumer  OFF-PA-10004041  Office Supplies   \n",
+       "9993      Chris Cortes   Consumer  OFF-AP-10002684  Office Supplies   \n",
+       "\n",
+       "     Sub-Category                                       Product Name  \\\n",
+       "0       Bookcases                  Bush Somerset Collection Bookcase   \n",
+       "1          Chairs  Hon Deluxe Fabric Upholstered Stacking Chairs,...   \n",
+       "2          Labels  Self-Adhesive Address Labels for Typewriters b...   \n",
+       "3          Tables      Bretford CR4500 Series Slim Rectangular Table   \n",
+       "4         Storage                     Eldon Fold 'N Roll Cart System   \n",
+       "...           ...                                                ...   \n",
+       "9989  Furnishings                             Ultra Door Pull Handle   \n",
+       "9990  Furnishings  Tenex B1-RE Series Chair Mats for Low Pile Car...   \n",
+       "9991       Phones                              Aastra 57i VoIP phone   \n",
+       "9992        Paper  It's Hot Message Books with Stickers, 2 3/4\" x 5\"   \n",
+       "9993   Appliances  Acco 7-Outlet Masterpiece Power Center, Wihtou...   \n",
+       "\n",
+       "      Quantity  Discount  Buy Price  Price Per Each  \n",
+       "0            2      0.00   130.9800        151.9368  \n",
+       "1            3      0.00   243.9800        317.1740  \n",
+       "2            2      0.00     7.3100         10.7457  \n",
+       "3            5      0.45   191.5155        114.9093  \n",
+       "4            2      0.20    11.1840         12.4422  \n",
+       "...        ...       ...        ...             ...  \n",
+       "9989         3      0.20     8.4160          9.7836  \n",
+       "9990         2      0.00    45.9800         53.7966  \n",
+       "9991         2      0.20   129.2880        138.9846  \n",
+       "9992         4      0.00     7.4000         10.7300  \n",
+       "9993         2      0.00   121.5800        158.0540  \n",
+       "\n",
+       "[9994 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Order ID                   int64\n",
+       "Order Date        datetime64[ns]\n",
+       "Ship Date         datetime64[ns]\n",
+       "Ship Mode                 object\n",
+       "Address                   object\n",
+       "Region                    object\n",
+       "Customer ID               object\n",
+       "Customer Name             object\n",
+       "Segment                   object\n",
+       "Product ID                object\n",
+       "Category                  object\n",
+       "Sub-Category              object\n",
+       "Product Name              object\n",
+       "Quantity                   int64\n",
+       "Discount                 float64\n",
+       "Buy Price                float64\n",
+       "Price Per Each           float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_features = df.select_dtypes(include=['bool', 'object', 'category'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Product ID</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Sub-Category</th>\n",
+       "      <th>Product Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Henderson, Kentucky, United States - 42420</td>\n",
+       "      <td>South</td>\n",
+       "      <td>CG-12520</td>\n",
+       "      <td>Claire Gute</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>FUR-BO-10001798</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Bookcases</td>\n",
+       "      <td>Bush Somerset Collection Bookcase</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>Henderson, Kentucky, United States - 42420</td>\n",
+       "      <td>South</td>\n",
+       "      <td>CG-12520</td>\n",
+       "      <td>Claire Gute</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>FUR-CH-10000454</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Chairs</td>\n",
+       "      <td>Hon Deluxe Fabric Upholstered Stacking Chairs,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Ship Mode                                     Address Region  \\\n",
+       "0  Second Class  Henderson, Kentucky, United States - 42420  South   \n",
+       "1  Second Class  Henderson, Kentucky, United States - 42420  South   \n",
+       "\n",
+       "  Customer ID Customer Name   Segment       Product ID   Category  \\\n",
+       "0    CG-12520   Claire Gute  Consumer  FUR-BO-10001798  Furniture   \n",
+       "1    CG-12520   Claire Gute  Consumer  FUR-CH-10000454  Furniture   \n",
+       "\n",
+       "  Sub-Category                                       Product Name  \n",
+       "0    Bookcases                  Bush Somerset Collection Bookcase  \n",
+       "1       Chairs  Hon Deluxe Fabric Upholstered Stacking Chairs,...  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " cat_features.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
